Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
 
 <p>My HackerRank solutions : <a href="https://www.hackerrank.com/RohanKhude">https://www.hackerrank.com/RohanKhude</a></p>
 
+<p>Currently solutions are available for :-</p>
+
+<p>Regular Expressions</p>
+
+<p>Algorithm</p>
+
+<p>SQL Database</p>
+
+<hr>
+
 <p>HackerRank Solution
 HackerRank Solving Problem
 HackerRank Programming Solution
